# connectedhomeip

config/zephyr/: README.md  zephyr-common.cmake
scripts/examples/: imxlinux_example.sh
src/platform/Zephyr/: BUILD.gn  CHIPDevicePlatformConfig.h  CHIPPlatformConfig.h  DiagnosticDataProviderImpl.cpp  args.gni
